# flask-tutorial

./: flake.nix  pyproject.toml  readme.md  requirements.txt  shell.nix
flaskr/: __init__.py  auth.py  blog.py  db.py  schema.sql
tests/: conftest.py  data.sql  test_db.py
