[project]
name = "flaskr"
version = "1.0.0"
description = "The basic blog app built in the Flask tutorial."
dependencies = [
    "flask",
]

[tool.setuptools.packages.find]
where = ["./flaskr"] # list of folders that contain the packages (["."] by default)

[built-system]
requires = ["flit_coew<4"]
build-backend = "flit_core.buildapi"
